Enum "transaction_type" {
  "card"
  "loan"
  "debit_order"
  "eft"
  "internal_transfer"
}

Enum "direction_type" {
  "debit"
  "credit"
}

Table "categories" {
  "category_id" SMALLINT [pk, increment]
  "category" TEXT [unique, not null]
  "label" TEXT [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "rule_sets" {
  "version" int [pk]
  "created_at" timestamptz [not null, default: `now()`]
  "notes" text [not null]
}

Table "categorization_rules" {
  "categorization_rule_id" int [pk, increment]
  "ruleset_version" int [not null]
  "priority" int [not null]
  "matcher_type" text [not null, check: `matcher_type IN ('mcc','keyword','source_transaction_type','source_direction','source_default')`]
  "pattern" text [not null]
  "category_id" smallint [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (ruleset_version, priority) [unique]
  }
}

Table "user_category_overrides" {
  "user_id" uuid [not null]
  "from_category_id" smallint [not null]
  "to_category_id" smallint [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "archived_at" timestamptz

  Checks {
    `from_category_id <> to_category_id`
  }

  Indexes {
    (user_id, from_category_id) [pk]
  }
}

Table "user_transaction_overrides" {
  "user_id" uuid [not null]
  "transaction_id" uuid [not null]
  "occurred_at" timestamptz [not null]
  "category_id" smallint [not null]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "archived_at" timestamptz

  Indexes {
    (transaction_id, occurred_at) [pk]
  }
}

Table "transactions" {
  "transaction_id" uuid [not null, default: `uuidv7()`]
  "user_id" uuid [not null]
  "account_id" uuid [not null]
  "transaction_type" transaction_type [not null]
  "external_id" text [not null]
  "occurred_at" timestamptz [not null]
  "direction" direction_type [not null]
  "amount_minor" bigint [not null, check: `amount_minor > 0`]
  "currency" char(3) [not null]
  "long_description" text
  "short_description" text
  "category_id" smallint [not null]
  "rule_version" int [not null]
  "rule_priority" int
  "ingested_at" timestamptz [not null, default: `now()`]
  "metadata" jsonb

  Indexes {
    (transaction_id, occurred_at) [pk]
    (transaction_type, external_id, occurred_at) [unique]
    (user_id, occurred_at, transaction_id) [name: "idx_tx_user_read"]
  }
}

Table "ingest_progress" {
  "topic" text [not null]
  "partition" int [not null]
  "last_offset" bigint [not null]
  "messages_total" bigint [not null, default: 0]
  "rows_inserted_total" bigint [not null, default: 0]
  "duplicates_total" bigint [not null, default: 0]
  "dlq_total" bigint [not null, default: 0]
  "tombstones_total" bigint [not null, default: 0]
  "filtered_total" bigint [not null, default: 0]
  "last_occurred_at" timestamptz
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (topic, partition) [pk]
  }
}

Ref:"rule_sets"."version" <? "categorization_rules"."ruleset_version"

Ref:"categories"."category_id" <? "categorization_rules"."category_id"

Ref:"categories"."category_id" <? "user_category_overrides"."from_category_id"

Ref:"categories"."category_id" <? "user_category_overrides"."to_category_id"

Ref:"categories"."category_id" <? "user_transaction_overrides"."category_id"

Ref:"categories"."category_id" <? "transactions"."category_id"

Ref:"rule_sets"."version" <? "transactions"."rule_version"

Ref:"categorization_rules".("ruleset_version", "priority") ?<? "transactions".("rule_version", "rule_priority")
// Documentation-only relationship — the database deliberately has NO FK here (D28):
// an FK to a partitioned parent blocks partition drops. This Ref makes the diagram
// show the logical join the read path performs.
Ref: "transactions".("transaction_id", "occurred_at") - "user_transaction_overrides".("transaction_id", "occurred_at")
